--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <div class="row">
       <div class="col-md-4 sidebar shimmer">
         <div class="row">
+          
           <div class="col-md-9 p-0">
             <input type="text" [(ngModel)]="city_name" class="form-control remove-box-shadow"
               placeholder="Procure a sua cidade">
@@ -12,8 +13,10 @@
           </div>
         </div>
         <div class="text-center">
+          
           <img src="https://i.ibb.co/Kzkk59k/15.png" class="img-principal" width="50%" alt="">
         </div>
+        
         <h2>{{ weather_forecast.main.feels_like }}°C</h2>
         <h4>{{ weather_forecast.name }}, {{country}}</h4>
         <hr>
@@ -23,6 +26,7 @@
         <span>Pressao: {{ weather_forecast.main.pressure }} Pa</span> <br>
       </div>
       <div class="col-md-8 main">
+        
         <h3>Forecast</h3>
         <div class="row">
           <div class="col-md-2">
@@ -148,35 +152,17 @@
                 </div>
               </div>
             </div>
+
           </div>
-
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" id="loaderBtn" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
-  style="display: none;">
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-  aria-labelledby="staticBackdropLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <div class="spinner-border" role="status">
-              <span class="visually-hidden">Loading...</span>
+          <div class="col-md-12">
+            <div class="alert alert-light" role="alert">
+              Aproveite as vantagens exclusivas! Autentique-se ou crie sua conta para acessar informações adicionais
+              <button class="btn btn-danger">Entrar</button>
             </div>
-            <p> Por favor aguarde..</p>
           </div>
+
         </div>
       </div>
-      <button type="button" class="btn btn-secondary" id="loaderCloseBtn" data-bs-dismiss="modal" style="display: none;">Close</button>
     </div>
   </div>
 </div>
