--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,7 +11,7 @@
 .main {
     /* height: 100vh; */
     padding: 50px;
-    height: 80vh;
+    /* height: 100vh; */
     border-radius: 0px 40px 40px 0px;
     background-color: #f6f6f8;
     position: relative;
@@ -20,13 +20,13 @@
 
 .sidebar {
     /* height: 100vh; */
-    padding: 80px 50px;
-    height: 80vh;
+    padding: 5% 3%;
+    /* height: 90vh; */
     border-radius: 40px 0px 0px 40px;
     background: rgba(255, 255, 255, 0.815);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 
 }
 
@@ -101,5 +101,5 @@ p,span {
 }
 
 .img-principal{
-    padding: 40px;
+    padding: 5px;
 }
