fix: update languages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <h3>Exchange Rates</h3>
+            <h3>Taxas de câmbio</h3>
             <div class="card mb-3 weather-card">
               <div class="card-body">
                 <h5 class="card-title"><span class="moeda">EUR </span><span class="ref_moeda">Moeda de Referencia</span>
@@ -111,7 +111,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <h3>Other information</h3>
+            <h3>Outras informações</h3>
             <div class="row" style="filter: blur(4px);">
               <div class="col-md-6">
                 <div class="card mb-3 weather-card">
@@ -132,7 +132,7 @@
             </div>
           </div>
         </div>
-        <h3>Weather Forecast 5 day / 3 hour</h3>
+        <h3>Previsão do tempo 5 dias / 3 horas</h3>
         <div class="row">
           <div class="col-2" *ngFor="let item of forecast">
             <div class="card mb-3 weather-card">
