--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,11 +31,7 @@
 
 }
 
-.content {
-    /* background-color: #f6f6f8; */
-    border-radius: 40px;
-    min-height: 50vh;
-}
+
 
 .weather-icon {
     width: 100%;
@@ -52,8 +48,9 @@
 }
 
 h2 {
-    font-size: 5.5rem;
-    font-family: 'Roboto'
+    font-size: 6.5rem;
+    font-family: 'Roboto';
+    padding-top: 20%;
 }
 
 h3 {
@@ -116,6 +113,7 @@ span {
 
     .remove-border-radius {
         display: none;
+        background-color: red;
     }
 
     .remove-box-shadow {
@@ -124,5 +122,9 @@ span {
     .main{
         border-radius: 0px;
         padding: 10px;
+    }
+    h2{
+        padding-top: 10px;
+        font-size: 3rem;
     }
 }
