--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,28 @@
 <div class="container-fluid">
-  <div class="content">
     <div class="row">
       <div class="col-md-6 col-lg-4 col-sm-12 sidebar">
         <div class="row">
 
           <div class="col-md-9 p-0">
             <input type="text" [(ngModel)]="city_name" class="form-control remove-box-shadow"
-              placeholder="Procure a sua cidade">
+              placeholder="Pesquise por uma cidade" (keyup.enter)="onEnterKeyPressed($event)">
           </div>
           <div class="col-md-3 p-0">
-            <button class="btn btn-danger remove-border-radius dm-disable" (click)="search()" [disabled]="disabled">
+            <button class="btn btn-danger remove-border-radius" (click)="search()" [disabled]="disabled">
               <span class="spinner-border spinner-border-sm" aria-hidden="true" *ngIf="spinner"></span>
               <span role="status" style="padding-left: 10px;">Pesquisar</span>
             </button>
           </div>
         </div>
         <div class="text-center">
-
-          <img src="https://i.ibb.co/Kzkk59k/15.png" class="img-principal" width="50%" alt="">
+          <h2>{{ weather_forecast.main.temp }}°C</h2>
+          <h4>{{ weather_forecast.name }}, {{country}}</h4>
         </div>
-
-        <h2>{{ weather_forecast.main.temp }}°C</h2>
-        <h4>{{ weather_forecast.name }}, {{country}}</h4>
         <hr>
         <span>Max: {{ weather_forecast.main.temp_max }} °C</span>
-        <span>Min: {{ weather_forecast.main.temp_min }} °C</span> 
-        <span>Humidade: {{ weather_forecast.main.humidity }} %</span> 
-        <span>Pressão: {{ weather_forecast.main.pressure }} Pa</span> 
+        <span>Min: {{ weather_forecast.main.temp_min }} °C</span>
+        <span>Humidade: {{ weather_forecast.main.humidity }} %</span>
+        <span>Pressão: {{ weather_forecast.main.pressure }} Pa</span>
       </div>
       <div class="col-md-6 col-lg-8 col-sm-12 main">
         <div class="row">
@@ -46,9 +42,9 @@
           </div>
           <div class="col-md-6">
             <h3>Taxas de câmbio</h3>
-            <div class="card mb-3 weather-card">
+            <div class="card mb-3 weather-card" >
               <div class="card-body">
-                <h5 class="card-title"><span class="moeda">1 {{ currency }} </span><span class="ref_moeda">Moeda de Referencia</span>
+                <h5 class="card-title"><span class="moeda">EUR </span><span class="ref_moeda">Moeda de Referencia</span>
                 </h5>
                 <div class="card-text">
                   <table class="table">
@@ -115,34 +111,46 @@
             </div>
           </div>
           <div class="col-md-6">
-            <h3>Outras informações</h3>
-            <div class="row" style="filter: blur(4px);">
-              <div class="col-md-6">
-                <div class="card mb-3 weather-card">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">558675876</h5>
-                    <p class="card-text" style="color: grey;">current population</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-3 weather-card">
-                  <div class="card-body text-center">
-                    <h5 class="card-title">1726</h5>
-                    <p class="card-text" style="color: grey; ">GDP per capita</p>
-                  </div>
-                </div>
+            <h3>Numero da População e PIB per capita</h3>
+            <app-population-gdp></app-population-gdp>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-10">
+            <h3>Previsão do tempo 5 dias / 3 horas {{country_code}}</h3>
+          </div>
+          <div class="col-md-2">
+            <div class="btn btn-danger btn-sm" (click)="viewMore()" *ngIf="!show_all">Ver mais</div>
+            <div class="btn btn-dark btn-sm" (click)="viewLess()" *ngIf="show_all">Ver menos</div>
+          </div>
+        </div>
+        <div class="row" *ngIf="!show_all">
+          <div class="col-md-2" *ngFor="let item of forecast.slice(0,6)">
+            <div class="card mb-3 weather-card">
+              <div class="card-body text-center">
+                <h5 class="card-title">{{ item.dt_txt }}</h5>
+                <img *ngIf="item.weather[0].main == 'Rain'" src="../assets/images/rain.png" width="55" height="50"
+                  alt="">
+                <img *ngIf="item.weather[0].main == 'Clouds'" src="../assets/images/clouds.png" width="55" height="50"
+                  alt="">
+                <img *ngIf="item.weather[0].main == 'Clear'" src="../assets/images/clear.png" width="55" height="50"
+                  alt="">
+                <p class="card-text">{{ item.main.temp }}°C</p>
               </div>
             </div>
           </div>
         </div>
-        <h3>Previsão do tempo 5 dias / 3 horas</h3>
-        <div class="row">
-          <div class="col-md-2" *ngFor="let item of forecast">
+        <div class="row" *ngIf="show_all">
+          <div class="col-md-2" *ngFor="let item of forecast.slice(6)">
             <div class="card mb-3 weather-card">
               <div class="card-body text-center">
                 <h5 class="card-title">{{ item.dt_txt }}</h5>
-                <img src="https://i.ibb.co/PZQXH8V/27.png" width="55" height="50" alt="">
+                <img *ngIf="item.weather[0].main == 'Rain'" src="../assets/images/rain.png" width="55" height="50"
+                  alt="">
+                <img *ngIf="item.weather[0].main == 'Clouds'" src="../assets/images/clouds.png" width="55" height="50"
+                  alt="">
+                <img *ngIf="item.weather[0].main == 'Clear'" src="../assets/images/clear.png" width="55" height="50"
+                  alt="">
                 <p class="card-text">{{ item.main.temp }}°C</p>
               </div>
             </div>
@@ -150,5 +158,4 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
