--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,7 +43,7 @@
 
 .container-fluid {
     min-height: 100vh;
-    /* background-image: url('https://i.ibb.co/RDfPqXz/pcn.jpg'); */
+    /* background-image: url('https://cdn.pixabay.com/photo/2023/01/06/07/09/italian-venezia-7700549_1280.jpg'); */
     background-color: #2A4C7E;
 }
 
