--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row">
+    <div class="row content">
       <div class="col-md-6 col-lg-4 col-sm-12 sidebar">
         <div class="row">
 
