--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -80,6 +80,16 @@ h5 {
 
 }
 
+.modal-header{
+    background-color: #BB2D3B;
+    color: #fff;
+}
+
+.remove-box-shadow-email {
+    box-shadow: none !important;
+    border: 1px solid #111;
+}
+
 .remove-border-radius {
     border-radius: 0;
     height: 36px;
