feat: implement auth

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,7 +118,7 @@
       </div>
       <div class="row">
         <div class="col-md-10">
-          <h3>Previsão do tempo 5 dias / 3 horas {{country_code}}</h3>
+          <h3>Previsão do tempo 5 dias / 3 horas</h3>
         </div>
         <div class="col-md-2">
           <div class="btn btn-danger btn-sm" (click)="viewMore()" *ngIf="!show_all">Ver mais</div>
