--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -171,7 +171,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-danger">Submeter</button>
+        <button type="button" class="btn btn-danger" (click)="authenticate()">Submeter</button>
       </div>
     </div>
   </div>
